Project 'drm/intel' was moved to 'drm/i915/kernel'. Please update any links and bookmarks that may still have the old path.
igt@gem_exec_balancer@bonded-sync|igt@gem_eio@ subtests - dmesg-warn/dmesg-fail - *ERROR* Failed to set param 6 to 100 (-ENODEV), *ERROR* Unable to force min freq to 100: -19
7> [95.313774] intel_gt_set_wedged [0fe0] 00000000 00000012 00000000 00000013 00000000 00000014 00000000 00000015
<7> [95.313859] intel_gt_set_wedged On hold?: 0
<7> [95.313875] intel_gt_set_wedged MMIO base: 0x00002000
<7> [95.313922] intel_gt_set_wedged EL_STAT_HI: 0x02000140
<7> [95.313927] intel_gt_set_wedged EL_STAT_LO: 0x4000309e
<7> [95.313931] intel_gt_set_wedged RING_START: 0x01233000
<7> [95.313936] intel_gt_set_wedged RING_HEAD: 0x00000058
<7> [95.313941] intel_gt_set_wedged RING_TAIL: 0x00000080
<7> [95.313949] intel_gt_set_wedged RING_CTL: 0x00003001
<7> [95.313956] intel_gt_set_wedged RING_MODE: 0x00000000
<7> [95.313961] intel_gt_set_wedged RING_IMR: 0x00000000
<7> [95.313966] intel_gt_set_wedged RING_ESR: 0x00000001
<7> [95.313970] intel_gt_set_wedged RING_EMR: 0xffffffff
<7> [95.313975] intel_gt_set_wedged RING_EIR: 0x00000000
<7> [95.313985] intel_gt_set_wedged ACTHD: 0x00000000_b5c5a044
<7> [95.313995] intel_gt_set_wedged BBADDR: 0x00000000_b5c5a045
<7> [95.314005] intel_gt_set_wedged DMA_FADDR: 0x00000000_b5c5a240
<7> [95.314010] intel_gt_set_wedged IPEIR: 0x00000000
<7> [95.314014] intel_gt_set_wedged IPEHR: 0xdeadbeef
<7> [95.314018] intel_gt_set_wedged HWSP:
<7> [95.314021] intel_gt_set_wedged [0000] 5a5a5a5a 5a5a5a5a 5a5a5a5a 5a5a5a5a 5a5a5a5a 5a5a5a5a 5a5a5a5a 5a5a5a5a
<7> [95.314023] intel_gt_set_wedged *
<7> [95.314026] intel_gt_set_wedged [0040] 10028001 03ff8000 03ff8000 10028000 10028001 03ff8000 03ff8000 10028000
<7> [95.314029] intel_gt_set_wedged [0060] 10028001 03ff8000 03ff8000 10028000 0dff8001 03ff8000 03ff8000 0dff8000
<7> [95.314032] intel_gt_set_wedged [0080] 0dff8001 03ff8000 03ff8000 0dff8000 10050001 03ff8000 5a5a5a5a 5a5a5a5a
<7> [95.314035] intel_gt_set_wedged [00a0] 5a5a5a5a 5a5a5a5a 5a5a5a5a 5a5a5a5a 5a5a5a5a 5a5a5a5a 5a5a5a5a 0000000a
<7> [95.314038] intel_gt_set_wedged [00c0] 5a5a5a5a 5a5a5a5a 5a5a5a5a 5a5a5a5a 5a5a5a5a 5a5a5a5a 5a5a5a5a 5a5a5a5a
<7> [95.314040] intel_gt_set_wedged *
<7> [95.314042] intel_gt_set_wedged [0100] 00000054 00000000 5a5a5a5a 5a5a5a5a 5a5a5a5a 5a5a5a5a 5a5a5a5a 5a5a5a5a
<7> [95.314045] intel_gt_set_wedged [0120] 5a5a5a5a 5a5a5a5a 5a5a5a5a 5a5a5a5a 5a5a5a5a 5a5a5a5a 5a5a5a5a 5a5a5a5a
<7> [95.314047] intel_gt_set_wedged *
<7> [95.314060] intel_gt_set_wedged Idle? no
<7> [95.314062] intel_gt_set_wedged IRQ: enabled
<7> [95.314064] intel_gt_set_wedged Signals:
<7> [95.314067] intel_gt_set_wedged [659:82] @ 563ms
<3> [95.314742] i915 0000:00:02.0: [drm] *ERROR* Failed to set param 6 to 100 (-ENODEV)
<3> [95.314750] i915 0000:00:02.0: [drm] *ERROR* Unable to force min freq to 100: -19
<7> [95.329619] i915 0000:00:02.0: [drm:intel_dp_aux_xfer [i915]] AUX B/DDI B/PHY B: timeout (status 0x7d4003ff)
<6> [95.331470] smsc75xx 3-7:1.0 enx803f5d0843e9: entering SUSPEND2 mode
<6> [95.332766] e1000e: EEE TX LPI TIMER: 00000011
<7> [95.332942] i915 0000:00:02.0: [drm:i915_hdcp_component_unbind [i915]] I915 HDCP comp unbind
<7> [95.343670] i915 0000:00:02.0: [drm:i915_audio_component_get_power [i915]] restored AUD_FREQ_CNTRL to 0x8010